add_library(fabm_models_metu OBJECT
            mnemiopsis/mnemiopsis.F90
           )

add_dependencies(fabm_models_metu fabm_base)

#-----------------------------------------------------------------------
# Copyright (C) 2014 - Karsten Bolding and Jorn Bruggeman (BB)         !
#-----------------------------------------------------------------------
